<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <PreferenceCategory
            android:title="@string/pc_datos">

            <CheckBoxPreference
                android:key="pref_delete_old"
                android:title="@string/pref_delete_old_title"
                android:summary="@string/pref_delete_old_summary"
                android:defaultValue="true"/>

            <EditTextPreference
                android:key="pref_char_limit"
                android:title="@string/pref_char_limit_title"
                android:summary="@string/pref_char_limit_summary"
                android:inputType="numberDecimal"/>

            </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/pc_operador">

            <SwitchPreference
                android:key="pref_mobile_data"
                android:title="@string/pref_mobile_data_title"
                android:summary="@string/pref_mobile_data_summary"/>

            <ListPreference
                android:key="pref_operator"
                android:dependency="pref_mobile_data"
                android:title="@string/pref_operator_title"
                android:summary="@string/pref_operator_summary"
                android:entries="@array/OperatorList"
                android:entryValues="@array/OperatorValues"
                android:defaultValue="1"/>

        </PreferenceCategory>

</PreferenceScreen>